--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.prod.config.js --progress --display-modules --colors",
-    "dev": "node build/dev-server.js"
+    "dev-node": "node build/dev-server.js",
+    "dev": "webpack-dev-server --inline --progress --config webpack.dev.config.js"
   },
   "author": "fivetree",
   "license": "ISC",
@@ -34,6 +35,7 @@
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
+    "webpack-dev-server": "^3.1.9",
     "webpack-hot-middleware": "^2.24.3",
     "webpack-merge": "^4.1.4"
   },
